<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FF5722"
        android:onClick="onBtnPlayClicked"
        android:text="@string/play"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtColor3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FF5722"
        android:onClick="onBtnReadRulesClicked"
        android:text="@string/read_rules"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer1Name" />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FF5722"
        android:onClick="onBtnViewBoardClicked"
        android:text="@string/view_leader_board"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer2Name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#FF5722"
        android:onClick="onBtnStartClicked"
        android:text="@string/start_the_game"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer3Name"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtPlayer1Name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_the_name_of_player_1"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOptions" />

    <EditText
        android:id="@+id/edtPlayer2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_name_of_player_2"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRead" />

    <EditText
        android:id="@+id/edtPlayer3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_name_of_player_3"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnView" />

    <EditText
        android:id="@+id/edtPlayer4Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_the_name_of_player_4"
        android:inputType="text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <Spinner
        android:id="@+id/spinnerOptions"
        android:layout_width="311dp"
        android:layout_height="35dp"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseP1Color"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:background="#66BB6A"
        android:onClick="onP2ChangeColor"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer4Name" />

    <TextView
        android:id="@+id/chooseP2Color"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:background="#42A5F5"
        android:onClick="onP2ChangeColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/chooseP3Color"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer4Name" />

    <TextView
        android:id="@+id/chooseP3Color"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:background="#EF5350"
        android:onClick="onP2ChangeColor"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/chooseP1Color"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer4Name" />

    <TextView
        android:id="@+id/txtColor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/chooseP3Color"
        app:layout_constraintTop_toBottomOf="@+id/chooseP3Color" />

    <TextView
        android:id="@+id/txtColor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="@+id/chooseP2Color"
        app:layout_constraintTop_toBottomOf="@+id/chooseP2Color" />

    <TextView
        android:id="@+id/txtColor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/chooseP1Color"
        app:layout_constraintTop_toBottomOf="@+id/chooseP1Color" />

</androidx.constraintlayout.widget.ConstraintLayout>